# surgeist-runtime

./: AGENTS.md  Cargo.toml  README.md
plans/: 2026-07-07-runtime-task-intents.md  2026-07-11-repository-review.md
plans/cycles/: runtime-review-findings-C01-leaf-boundary-safety.md  runtime-review-findings-C02-resources-coordination-mailboxes.md  runtime-review-findings-C03-surface-lifecycle-registry.md  runtime-review-findings-C04-reducer-effects-provenance.md  runtime-review-findings-C05-queue-wake-drain-scheduling.md  runtime-review-findings-C06-manifest-snapshot-documentation-closure.md
plans/sequences/: runtime-review-findings-resolution.md
plans/specs/: runtime-review-findings-resolution.md
src/: bridge.rs  command.rs  coord.rs  descriptor.rs  diagnostic.rs  effect.rs  event.rs  executor.rs  ids.rs  input.rs  lib.rs  loop_.rs  provenance.rs  proxy.rs  reducer.rs  resource.rs  runtime.rs  runtime_tokio.rs  service.rs  snapshot.rs  surface.rs  task.rs  testing.rs  tests.rs
