[package]
name = "surgeist-runtime"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/bj-data-eng/surgeist-runtime"
readme = "README.md"
description = "App runtime orchestration contracts for Surgeist."

[lib]
name = "surgeist_runtime"
path = "src/lib.rs"

[dependencies]
surgeist-retained = { path = "../surgeist-retained", version = "=0.1.0" }
surgeist-task = { path = "../surgeist-task", version = "=0.1.0" }
surgeist-window = { path = "../surgeist-window", version = "=0.1.0" }
tokio = { version = "=1.48.0", optional = true, features = ["rt-multi-thread", "sync", "time"] }

[features]
default = []
runtime-tokio = ["dep:tokio"]
