[package]
name = "surgeist-runtime"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/bj-data-eng/surgeist-runtime"
readme = "README.md"
description = "App runtime orchestration contracts for Surgeist."

[lib]
name = "surgeist_runtime"
path = "src/lib.rs"

[features]
default = []
